--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8080
   servlet:
     encoding:
       charset: UTF-8
@@ -15,6 +15,28 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+  security:
+    user:
+      name: test
+      password: 1234
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-id: fpLFykfIYXwpre2jEUjb
+            client-secret: bhO4BvKjUl
+            scope:
+            - email
+            - name
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:8001/starbucks?useUnicode=true
