--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
             - name
             client-name: Naver
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://54.156.150.179:8080/login/oauth2/code/naver
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
@@ -39,9 +39,9 @@ spring:
             user-name-attribute: response
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:8001/starbucks?useUnicode=true&allowMultiQueries=true
-    username: root
-    password: toor
+    url: jdbc:mariadb://database-std.cqwtiywxjon4.us-east-1.rds.amazonaws.com:3306/starbucks?useUnicode=true&allowMultiQueries=true
+    username: coqja2013
+    password: tommy0813!
     
 mybatis:
   mapper-locations:
@@ -49,3 +49,4 @@ mybatis:
   
 file:
   path: D:/Project_Starbucks/ProjectStarbucks/image/
+  #path: /home/ubuntu/ProjectStarbucks/image/
