--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,9 +39,9 @@ spring:
             user-name-attribute: response
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://database-std.cqwtiywxjon4.us-east-1.rds.amazonaws.com:3306/starbucks?useUnicode=true&allowMultiQueries=true
-    username: coqja2013
-    password: tommy0813!
+    url: jdbc:mariadb://localhost:8001/starbucks?useUnicode=true&allowMultiQueries=true
+    username: root
+    password: toor
     
 mybatis:
   mapper-locations:
